[tool.poetry]
name = "course"
version = "0.1.0"
description = "learning to code"
authors = ["jemz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
jupyter = "^1.0.0"
numpy = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
